added linux install scripts to cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,6 @@ if (WIN32)
     install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/install_driver.bat" DESTINATION "${DRIVER_INSTALL_DIR}")
     install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/uninstall_driver.bat" DESTINATION "${DRIVER_INSTALL_DIR}")
 else()
-    # TODO:
-    # install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/install_driver.sh" DESTINATION "${DRIVER_INSTALL_DIR}")
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/install_driver.sh" DESTINATION "${DRIVER_INSTALL_DIR}")
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/uninstall_driver.sh" DESTINATION "${DRIVER_INSTALL_DIR}")
 endif()
